sql-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30001
  type: NodePort
